fixed img on mobile

--- a/style.css
+++ b/style.css
@@ -172,16 +172,18 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
-    height: 100%;
+    max-width: 370px;
+    max-height: 200px !important;
     object-fit: contain;
+    overflow-y: hidden;
 }
 
 .myCardImg {
     max-width: 370px;
-    max-height: 200px;
+    max-height: 200px !important;
     margin-left: auto;
     margin-right: auto;
+    object-fit: contain;
 }
 
 .project-title {
